--- a/src/angular/road-story-tracking/.vscode/launch.json
+++ b/src/angular/road-story-tracking/.vscode/launch.json
@@ -5,33 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
-            "request": "launch",
-            "name": "DEBUG Frontend - webpack",
-            "runtimeExecutable": "npm",
-            "runtimeArgs": [
-                "start"
-            ],
-            "cwd": "${workspaceFolder}",
-            "outputCapture": "std",
-            "console": "integratedTerminal",
-            "timeout": 10000000000000000000,
-            "showAsyncStacks": false
-        },
-        {
             "type": "chrome",
             "request": "launch",
-            "name": "DEBUG Frontend - chrome",
+            "name": "DEBUG",
             "url": "http://localhost:4200",
             "webRoot": "${workspaceRoot}",
             "showAsyncStacks": false,
             "smartStep": true
-        }
-    ],
-    "compounds": [
-        {
-            "name": "DEBUG ALL",
-            "configurations": ["DEBUG Frontend - chrome", "DEBUG Frontend - webpack"]
         }
     ]
 }
