--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.Model/RoadStoryTracking.Model.csproj
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.Model/RoadStoryTracking.Model.csproj
@@ -5,11 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Responses\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NETCore.App" Version="2.0.6" />
   </ItemGroup>
 
 </Project>
