--- a/src/angular/road-story-tracking/package.json
+++ b/src/angular/road-story-tracking/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "road-story-tracking",
-  "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "lint": "ng lint"
-  },
-  "private": true,
-  "dependencies": {
-    "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^5.1.1",
-    "@angular/cdk": "^5.0.1",
-    "@angular/common": "^5.1.1",
-    "@angular/compiler": "^5.1.1",
-    "@angular/core": "^5.1.1",
-    "@angular/forms": "^5.1.1",
-    "@angular/http": "^5.1.1",
-    "@angular/material": "^5.0.1",
-    "@angular/platform-browser": "^5.1.1",
-    "@angular/platform-browser-dynamic": "^5.1.1",
-    "@angular/router": "^5.1.1",
-    "core-js": "^2.5.3",
-    "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
-    "ngx-gallery": "^4.1.1",
-    "rxjs": "^5.5.5",
-    "zone.js": "^0.8.18"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.6.1",
-    "@angular/compiler-cli": "^5.1.1",
-    "@angular/language-service": "^5.1.1",
-    "@types/node": "~8.5.1",
-    "codelyzer": "^4.0.2",
-    "ts-node": "~4.0.2",
-    "tslint": "~5.8.0",
-    "typescript": "~2.4.2"
-  }
+    "name": "city-story-tracking",
+    "version": "1.0.0",
+    "license": "MIT",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build --prod",
+        "lint": "ng lint"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^5.2.0",
+        "@angular/common": "^5.2.0",
+        "@angular/compiler": "^5.2.0",
+        "@angular/core": "^5.2.0",
+        "@angular/forms": "^5.2.0",
+        "@angular/http": "^5.2.0",
+        "@angular/platform-browser": "^5.2.0",
+        "@angular/platform-browser-dynamic": "^5.2.0",
+        "@angular/router": "^5.2.0",
+        "core-js": "^2.4.1",
+        "rxjs": "^5.5.6",
+        "zone.js": "^0.8.19",
+        "@agm/core": "^1.0.0-beta.2",
+        "@angular/cdk": "^5.2.4",
+        "@angular/material": "^5.2.4",
+        "font-awesome": "^4.7.0",
+        "hammerjs": "^2.0.8",
+        "ngx-gallery": "^4.1.1"
+    },
+    "devDependencies": {
+        "@angular/cli": "~1.7.3",
+        "@angular/compiler-cli": "^5.2.0",
+        "@angular/language-service": "^5.2.0",
+        "@types/node": "~6.0.60",
+        "codelyzer": "^4.0.1",
+        "ts-node": "~4.1.0",
+        "tslint": "~5.9.1",
+        "typescript": "~2.5.3"
+    }
 }
