--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi.Business/RoadStoryTracking.WebApi.Business.csproj
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi.Business/RoadStoryTracking.WebApi.Business.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.2.1" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.1.0" />
   </ItemGroup>
 
   <ItemGroup>
