--- a/src/angular/road-story-tracking/package.json
+++ b/src/angular/road-story-tracking/package.json
@@ -10,24 +10,27 @@
     },
     "private": true,
     "dependencies": {
+        "@agm/core": "^1.0.0-beta.2",
         "@angular/animations": "^5.2.0",
+        "@angular/cdk": "^5.2.4",
         "@angular/common": "^5.2.0",
         "@angular/compiler": "^5.2.0",
         "@angular/core": "^5.2.0",
         "@angular/forms": "^5.2.0",
         "@angular/http": "^5.2.0",
+        "@angular/material": "^5.2.4",
         "@angular/platform-browser": "^5.2.0",
         "@angular/platform-browser-dynamic": "^5.2.0",
+        "@angular/platform-server": "^5.2.9",
         "@angular/router": "^5.2.0",
+        "@angular/service-worker": "^5.2.9",
         "core-js": "^2.4.1",
-        "rxjs": "^5.5.6",
-        "zone.js": "^0.8.19",
-        "@agm/core": "^1.0.0-beta.2",
-        "@angular/cdk": "^5.2.4",
-        "@angular/material": "^5.2.4",
         "font-awesome": "^4.7.0",
         "hammerjs": "^2.0.8",
-        "ngx-gallery": "^4.1.1"
+        "ng-pwa-tools": "0.0.15",
+        "ngx-gallery": "^4.1.1",
+        "rxjs": "^5.5.6",
+        "zone.js": "^0.8.19"
     },
     "devDependencies": {
         "@angular/cli": "~1.7.3",
