--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/RoadStoryTracking.WebApi.csproj
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/RoadStoryTracking.WebApi.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
