Add building form soultion

--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/RoadStoryTracking.WebApi.csproj
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/RoadStoryTracking.WebApi.csproj
@@ -29,4 +29,19 @@
   <ItemGroup>
     <PackageReference Update="Microsoft.NETCore.App" Version="2.1.5" />
   </ItemGroup>
+
+  <Target Name="EnsureNode">
+    <Exec Command="node --version" ContinueOnError="true">
+      <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
+    </Exec>
+    <Error Condition="'$(ErrorCode)' != '0'" Text="Node.js is required to build and run this project. To continue, please install Node.js from https://nodejs.org/, and then restart your command prompt or IDE." />
+  </Target>
+  <Target Name="ReleaseRunNgBuild" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Release' ">
+    <CallTarget Targets="EnsureNode" />
+    <Message Importance="high" Text="Install packages..." />
+    <Exec Command="npm install" />
+    <Message Importance="high" Text="Performing ng build for prd build..." />
+    <Exec Command="npm run-script build-prod" />
+    <Exec Command="xcopy &quot;$(SolutionDir)../../angular/road-story-tracking/dist&quot; &quot;$(ProjectDir)wwwroot\&quot; /S /Y /I" />
+  </Target>
 </Project>
