--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/Properties/launchSettings.json
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/Properties/launchSettings.json
@@ -16,7 +16,7 @@
     },
     "RoadStoryTracking.WebApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
