--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/appsettings.Development.json
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/appsettings.Development.json
@@ -6,5 +6,21 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Storage": {
+    "ImageBlobStorageName": "Default",
+    "Blobs": {
+      "Default": {
+        "ConnectionString": "UseDevelopmentStorage=true",
+        "DefaultContainerName": "city-story-tracking",
+        "Location": "assets\\markers\\images"
+      }
+    },
+    "Queues": {
+      "Default": {
+        "ConnectionString": "UseDevelopmentStorage=true",
+        "QueueName": "images-queue"
+      }
+    }
   }
 }
