--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/appsettings.json
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/appsettings.json
@@ -11,5 +11,21 @@
         "Default": "Warning"
       }
     }
+  },
+  "Storage": {
+    "ImageBlobStorageName": "Default",
+    "Blobs": {
+      "Default": {
+        "ConnectionString": "UseDevelopmentStorage=true",
+        "DefaultContainerName": "city-story-tracking",
+        "Location": "assets\\markers\\images"
+      }
+    },
+    "Queues": {
+      "Default": {
+        "ConnectionString": "UseDevelopmentStorage=true",
+        "QueueName": "images-queue"
+      }
+    }
   }
 }
