--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebJob.Images/appsettings.json
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebJob.Images/appsettings.json
@@ -13,8 +13,20 @@
     }
   },
   "Storage": {
-    "ImageQueue": {
+    "DefaultQueue": {
       "ConnectionString": "UseDevelopmentStorage=true"
+    },
+    "Blobs": {
+      "Default": {
+        "ConnectionString": "UseDevelopmentStorage=true",
+        "DefaultContainerName": "city-story-tracking",
+        "Location": "assets\\markers\\images"
+      },
+      "Test": {
+        "ConnectionString": "UseDevelopmentStorage=true",
+        "DefaultContainerName": "city-story-tracking",
+        "Location": "testAssets\\markers\\images"
+      }
     }
   }
 }
