--- a/src/angular/road-story-tracking/package.json
+++ b/src/angular/road-story-tracking/package.json
@@ -1,45 +1,50 @@
 {
-    "name": "city-story-tracking",
-    "version": "1.0.0",
-    "license": "MIT",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "build-prod": "ng build --prod",
-        "lint": "ng lint"
-    },
-    "private": true,
-    "dependencies": {
-        "@agm/core": "^1.0.0-beta.2",
-        "@angular/animations": "^5.2.0",
-        "@angular/cdk": "^5.2.4",
-        "@angular/common": "^5.2.0",
-        "@angular/compiler": "^5.2.0",
-        "@angular/core": "^5.2.0",
-        "@angular/forms": "^5.2.0",
-        "@angular/http": "^5.2.0",
-        "@angular/material": "^5.2.4",
-        "@angular/platform-browser": "^5.2.0",
-        "@angular/platform-browser-dynamic": "^5.2.0",
-        "@angular/platform-server": "^5.2.9",
-        "@angular/router": "^5.2.0",
-        "@angular/service-worker": "^5.2.9",
-        "core-js": "^2.4.1",
-        "font-awesome": "^4.7.0",
-        "hammerjs": "^2.0.8",
-        "ngx-gallery": "^5.3.1",
-        "rxjs": "^5.5.6",
-        "zone.js": "^0.8.19"
-    },
-    "devDependencies": {
-        "@angular/cli": "~1.7.3",
-        "@angular/compiler-cli": "^5.2.0",
-        "@angular/language-service": "^5.2.0",
-        "@types/node": "~6.0.60",
-        "codelyzer": "^4.0.1",
-        "ts-node": "~4.1.0",
-        "tslint": "~5.9.1",
-        "typescript": "~2.5.3"
-    }
+  "name": "city-story-tracking",
+  "version": "1.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "build-prod": "ng build --prod",
+    "lint": "ng lint"
+  },
+  "private": true,
+  "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
+    "@angular/animations": "7.1.1",
+    "@angular/cdk": "^7.1.0",
+    "@angular/common": "7.1.1",
+    "@angular/compiler": "7.1.1",
+    "@angular/core": "7.1.1",
+    "@angular/forms": "7.1.1",
+    "@angular/http": "7.1.1",
+    "@angular/material": "^7.1.0",
+    "@angular/platform-browser": "7.1.1",
+    "@angular/platform-browser-dynamic": "7.1.1",
+    "@angular/platform-server": "7.1.1",
+    "@angular/router": "7.1.1",
+    "@angular/service-worker": "7.1.1",
+    "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "ngx-gallery": "^5.3.1",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "7.1.0",
+    "@angular/compiler-cli": "7.1.1",
+    "@angular/language-service": "7.1.1",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "3.1.6",
+    "webpack": "^4.26.1",
+    "webpack-dev-server": "^3.1.10"
+  }
 }
