Add images resizing

--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebJob.Images/appsettings.json
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebJob.Images/appsettings.json
@@ -12,6 +12,20 @@
       }
     }
   },
+  "Images": {
+    "Small": {
+      "Width": 320,
+      "Height": 180
+    },
+    "Medium": {
+      "Width": 1366,
+      "Height": 768
+    },
+    "Large": {
+      "Width": 1920,
+      "Height": 1080
+    }
+  },
   "Storage": {
     "DefaultQueue": {
       "ConnectionString": "UseDevelopmentStorage=true"
