--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebJob.Images/RoadStoryTracking.WebJob.Images.csproj
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebJob.Images/RoadStoryTracking.WebJob.Images.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.1" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.1" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
 
   <ItemGroup>
