--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/appsettings.Development.json
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/appsettings.Development.json
@@ -7,6 +7,9 @@
       "Microsoft": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=RoadStoryTracking;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Storage": {
     "ImageBlobStorageName": "Default",
     "Blobs": {
