--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebJob.Images/RoadStoryTracking.WebJob.Images.csproj
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebJob.Images/RoadStoryTracking.WebJob.Images.csproj
@@ -14,6 +14,7 @@
     <Content Include="appsettings.Development.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>appsettings.json</DependentUpon>
     </Content>
     <Content Include="appsettings.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
@@ -32,5 +33,4 @@
   <ItemGroup>
     <ProjectReference Include="..\RoadStoryTracking.WebApi.Business\RoadStoryTracking.WebApi.Business.csproj" />
   </ItemGroup>
-
 </Project>
