--- a/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/RoadStoryTracking.WebApi.csproj
+++ b/src/net/RoadStoryTracking.Soultion/RoadStoryTracking.WebApi/RoadStoryTracking.WebApi.csproj
@@ -21,7 +21,7 @@
     <None Include="wwwroot\fontawesome-webfont.912ec66d7572ff821749.svg" />
     <None Include="wwwroot\fontawesome-webfont.af7ae505a9eed503f8b8.woff2" />
     <None Include="wwwroot\inline.318b50c57b4eba3d437b.bundle.js" />
-    <None Include="wwwroot\mailing-transformation.xslt" />
+    <None Include="wwwroot\transformations\mailing-transformation.xslt" />
     <None Include="wwwroot\main.569c8d5c3e2eb508ec6a.bundle.js" />
     <None Include="wwwroot\ngsw-worker.js" />
     <None Include="wwwroot\polyfills.2d896654d931a4d9a559.bundle.js" />
